force-app/main/default/objects/Docusign_Setting__mdt/Docusign_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Docusign Setting</label>
    <pluralLabel>Docusign Settings</pluralLabel>
</CustomObject>