force-app/main/default/objects/Docusign_Setting__mdt/fields/accountId__c.field-meta.xml
<CustomField>
    <fullName>accountId__c</fullName>
    <label>accountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>