force-app/main/default/objects/Docusign_Setting__mdt/fields/audience__c.field-meta.xml
<CustomField>
    <fullName>audience__c</fullName>
    <label>audience</label>
    <length>100</length>
    <type>Text</type>
</CustomField>