force-app/main/default/objects/Docusign_Setting__mdt/fields/baseUrl__c.field-meta.xml
<CustomField>
    <fullName>baseUrl__c</fullName>
    <label>baseUrl</label>
    <type>Url</type>
</CustomField>