force-app/main/default/objects/Docusign_Setting__mdt/fields/certificateName__c.field-meta.xml
<CustomField>
    <fullName>certificateName__c</fullName>
    <label>certificate Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>