force-app/main/default/objects/Docusign_Setting__mdt/fields/userId__c.field-meta.xml
<CustomField>
    <fullName>userId__c</fullName>
    <label>userId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>